add quickjs trace

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ android {
 sentry {
     // Disables or enables debug log output, e.g. for for sentry-cli.
     // Default is disabled.
-    debug = true
+    debug = false
 
     // The slug of the Sentry organization to use for uploading proguard mappings/source contexts.
     org = "koswu"
