--- a/quickjs/build.gradle
+++ b/quickjs/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id "io.sentry.android.gradle" version "3.14.0"
 }
 
 android {
@@ -13,4 +14,46 @@ android {
 
 dependencies {
     
+}
+
+sentry {
+    // Disables or enables debug log output, e.g. for for sentry-cli.
+    // Default is disabled.
+    debug = false
+
+    // The slug of the Sentry organization to use for uploading proguard mappings/source contexts.
+    org = "koswu"
+
+    // The slug of the Sentry project to use for uploading proguard mappings/source contexts.
+    projectName = "tvbox"
+
+    // The authentication token to use for uploading proguard mappings/source contexts.
+    // WARNING: Do not expose this token in your build.gradle files, but rather set an environment
+    // variable and read it into this property.
+    authToken = System.getenv("SENTRY_AUTH_TOKEN")
+
+
+    // Whether the plugin should attempt to auto-upload the native debug symbols to Sentry or not.
+    // If disabled the plugin will run a dry-run.
+    // Default is enabled.
+    autoUploadNativeSymbols = true
+
+    // Does or doesn't include the source code of native code for Sentry.
+    // This executes sentry-cli with the --include-sources param. automatically so
+    // you don't need to do it manually.
+    // This option has an effect only when [uploadNativeSymbols] is enabled.
+    // Default is disabled.
+    includeNativeSources = true
+
+    // Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
+    // This enables source context, allowing you to see your source
+    // code as part of your stack traces in Sentry.
+    includeSourceContext = true
+
+    // Configure additional directories to be included in the source bundle which is used for
+    // source context. The directories should be specified relative to the Gradle module/project's
+    // root. For example, if you have a custom source set alongside 'main', the parameter would be
+    // 'src/custom/java'.
+    additionalSourceDirsForSourceContext = []
+
 }
