--- a/quickjs/build.gradle
+++ b/quickjs/build.gradle
@@ -38,6 +38,8 @@ sentry {
     // Default is enabled.
     autoUploadNativeSymbols = true
 
+    uploadNativeSymbols = true
+
     // Does or doesn't include the source code of native code for Sentry.
     // This executes sentry-cli with the --include-sources param. automatically so
     // you don't need to do it manually.
