--- a/quickjs/build.gradle
+++ b/quickjs/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 sentry {
     // Disables or enables debug log output, e.g. for for sentry-cli.
     // Default is disabled.
-    debug = false
+    debug = true
 
     // The slug of the Sentry organization to use for uploading proguard mappings/source contexts.
     org = "koswu"
