--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
     buildTypes {        
         release {
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            //proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             minifyEnabled false
             ndk {
                 abiFilters 'armeabi-v7a', 'arm64-v8a'
@@ -59,7 +59,7 @@ android {
 sentry {
     // Disables or enables debug log output, e.g. for for sentry-cli.
     // Default is disabled.
-    debug = false
+    debug = true
 
     // The slug of the Sentry organization to use for uploading proguard mappings/source contexts.
     org = "koswu"
