--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,9 @@ jobs:
         run: |
           chmod +x gradlew
           export SENTRY_AUTH_TOKEN=${{secrets.SENTRY_AUTH_TOKEN}}
+          export SENTRY_PROJECT=tvbox
           echo using $SENTRY_AUTH_TOKEN
-          ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
+          ./gradlew assembleDebug --build-cache --parallel --daemon --warning-mode all
       - name: generate sentry config
         run: |
           echo "defaults.project=tvbox" > sentry.properties
