--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4.0.0
+        with:
+          distribution: corretto
+          java-version: 17
+        
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Release Apk Sign
