update action file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,11 +31,11 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Create Release Sign
         run: |
-          echo "$JKS_FILE" | base64 -d  > app/TVBoxOSC.jks
+          echo "$JKS_FILE" | base64 -d  > TVBoxOSC.jks
       - name: Build With Gradle
         run: |
           chmod +x gradlew
-          ./gradlew assembleDebug --build-cache --parallel --daemon --warning-mode all \
+          ./gradlew assembleRelease --build-cache --parallel --daemon --warning-mode all \
           -Pandroid.injected.signing.store.file=TVBoxOSC.jks \
           -Pandroid.injected.signing.store.password=${{secrets.JKS_PASSWORD}} \
           -Pandroid.injected.signing.key.alias=mykey \
