update action file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease --build-cache --parallel --daemon --warning-mode all \
-          -Pandroid.injected.signing.store.file=TVBoxOSC.jks \
+          -Pandroid.injected.signing.store.file=`pwd`/app/TVBoxOSC.jks \
           -Pandroid.injected.signing.store.password=${{secrets.JKS_PASSWORD}} \
           -Pandroid.injected.signing.key.alias=mykey \
           -Pandroid.injected.signing.key.password=${{secrets.JKS_PASSWORD}}
